added missing div tag

--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -384,7 +384,7 @@
     "Eсли вы используете деревья решений, то можно воспользоваться методом  model.feature_importances\n",
     "<br>\n",
     "<strong>4 балла</strong>\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
