another missing tag

--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -442,7 +442,7 @@
     "<div style=\"text-align:justify\">\n",
     "Примените функцию к вашим классификаторам, видны ли по отобранным словам очевидные ошибки?\n",
     "Используйте параметры CountVectorizer, для того, чтобы уменьшить количество признаков и убрать нерелевантные (например числа, токены слишком низкой или высокой документной частотой, и т.д.), постарайтесь добиться улучшения результатов работы моделей (снова выводите результаты модели на трейне и на тесте, чтобы видеть, уменьшается ли переобучение)\n",
-    "<strong>3 балла </strong>\n",
+    "<strong>3 балла </strong><br>\n",
     "</div>"
    ]
   },
