--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -441,8 +441,8 @@
    "source": [
     "<div style=\"text-align:justify\">\n",
     "Примените функцию к вашим классификаторам, видны ли по отобранным словам очевидные ошибки?\n",
-    "Используйте параметры CountVectorizer, для того, чтобы уменьшить количество признаков и убрать нерелевантные (например числа, токены слишком низкой или высокой документной частотой, и т.д.), постарайтесь добиться улучшения результатов работы моделей (снова выводите результаты модели на трейне и на тесте, чтобы видеть, уменьшается ли переобучение)\n",
-    "<strong>3 балла </strong><br>\n",
+    "Используйте параметры CountVectorizer, для того, чтобы уменьшить количество признаков и убрать нерелевантные (например числа, токены слишком низкой или высокой документной частотой, и т.д.), постарайтесь добиться улучшения результатов работы моделей (снова выводите результаты модели на трейне и на тесте, чтобы видеть, уменьшается ли переобучение).<br>\n",
+    "<strong>3 балла </strong>\n",
     "</div>"
    ]
   },
@@ -2965,7 +2965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*В целом фичи выглядят достаточно вменяемо. Например, для бейсбола наблюдаем счет игры (видимо) как фичу.*"
+    "*В целом фичи выглядят достаточно вменяемо.*"
    ]
   },
   {
